--- a/kibana/Dockerfile
+++ b/kibana/Dockerfile
@@ -2,7 +2,8 @@ FROM microsoft/windowsservercore
 
 # Build variable to allow passing in a specific version of Elasticsearch to download
 ARG KIBANA_VERSION=6.4.1
-ARG KIBANA_SOURCE=kibana-${KIBANA_VERSION}-windows-x86_64
+ARG KIBANA_SOURCE=kibana-oss-${KIBANA_VERSION}-windows-x86_64
+ARG KIBANA_PATH=kibana-${KIBANA_VERSION}-windows-x86_64
 
 SHELL ["powershell.exe", "-Command"]
 
@@ -11,13 +12,13 @@ ADD ["https://artifacts.elastic.co/downloads/kibana/${KIBANA_SOURCE}.zip", "/"]
 
 # Extracting the archive can take a while unless this step is cached already
 RUN powershell.exe -Command \
-  Expand-Archive -Path \$($Env:KIBANA_SOURCE).zip -DestinationPath \ ; \
-  Remove-Item -Path \$($Env:KIBANA_SOURCE).zip;
+  Expand-Archive -Path \$($Env:KIBANA_PATH).zip -DestinationPath \ ; \
+  Remove-Item -Path \$($Env:KIBANA_PATH).zip;
 
 # ELASTIC_HOME is used by the runelasticsearch.cmd file to launch Elasticsearch.
-ENV KIBANA_HOME C:\\${KIBANA_SOURCE}
+ENV KIBANA_HOME C:\\${KIBANA_PATH}
 
-COPY kibana.yml /${KIBANA_SOURCE}/config/
+COPY kibana.yml /${KIBANA_PATH}/config/
 
 COPY RunKibana.ps1 /
 CMD ["powershell", "-File", "C:/RunKibana.ps1"]
