Fix for elastic lookup

--- a/logstash/elastic.pipeline.conf
+++ b/logstash/elastic.pipeline.conf
@@ -20,7 +20,7 @@ filter {
 output { 
     elasticsearch { 
         id => "my_plugin_id"
-        hosts => ["http://localhost:9200"]
+        hosts => ["http://elasticsearch:9200"]
         index => "logstash-%{+YYYY.MM.dd}"
     }
 }
