--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -23,7 +23,8 @@ COPY logstash.yml ${LOGSTASH_HOME}/config/
 
 # Create a data volume and map it to the G: drive, allowing Java to call Path.toRealPath() successfully
 VOLUME c:/logstash_data
-RUN Set-Variable -Name 'regpath' -Value 'HKLM:\SYSTEM\CurrentControlSet\Control\Session Manager\DOS Devices' ; \
+RUN powershell.exe -Command \
+    Set-Variable -Name 'regpath' -Value 'HKLM:\SYSTEM\CurrentControlSet\Control\Session Manager\DOS Devices' ; \
     Set-ItemProperty -path $regpath -Name 'H:' -Value '\??\C:\logstash_data' -Type String ;
 
 ENV ES_JAVA_OPTS -Xms512m -Xmx512m
